SERVER-60161 Make _kChunkOpLock and _kZoneOpLock acquisitions interruptable

(cherry picked from commit c6884c0b66da1c23499f12f18688c9cd8f0619f1)