src/mongo/db/s/config/sharding_catalog_manager_chunk_operations.cpp
@@ -536,7 +536,7 @@ StatusWith<BSONObj> ShardingCatalogManager::commitChunkSplit(
     // migrations
     // TODO(SERVER-25359): Replace with a collection-specific lock map to allow splits/merges/
     // move chunks on different collections to proceed in parallel
-    Lock::ExclusiveLock lk(opCtx->lockState(), _kChunkOpLock);
+    Lock::ExclusiveLock lk(opCtx, opCtx->lockState(), _kChunkOpLock);
 
     // Get the max chunk version for this namespace.
     auto swCollVersion = getCollectionVersion(opCtx, nss);
@@ -888,7 +888,7 @@ StatusWith<BSONObj> ShardingCatalogManager::commitChunksMerge(
     // migrations
     // TODO(SERVER-25359): Replace with a collection-specific lock map to allow splits/merges/
     // move chunks on different collections to proceed in parallel
-    Lock::ExclusiveLock lk(opCtx->lockState(), _kChunkOpLock);
+    Lock::ExclusiveLock lk(opCtx, opCtx->lockState(), _kChunkOpLock);
 
     // 1. Retrieve the initial collection version info to build up the logging info.
     auto swCollVersion = getCollectionVersion(opCtx, nss);
@@ -1076,7 +1076,7 @@ StatusWith<BSONObj> ShardingCatalogManager::commitChunkMigration(
     // TODO(SERVER-25359): Replace with a collection-specific lock map to allow splits/merges/
     // move chunks on different collections to proceed in parallel.
     // (Note: This is not needed while we have a global lock, taken here only for consistency.)
-    Lock::ExclusiveLock lk(opCtx->lockState(), _kChunkOpLock);
+    Lock::ExclusiveLock lk(opCtx, opCtx->lockState(), _kChunkOpLock);
 
     if (!validAfter) {
         return {ErrorCodes::IllegalOperation, "chunk operation requires validAfter timestamp"};
@@ -1325,7 +1325,7 @@ void ShardingCatalogManager::clearJumboFlag(OperationContext* opCtx,
     // TODO(SERVER-25359): Replace with a collection-specific lock map to allow splits/merges/
     // move chunks on different collections to proceed in parallel.
     // (Note: This is not needed while we have a global lock, taken here only for consistency.)
-    Lock::ExclusiveLock lk(opCtx->lockState(), _kChunkOpLock);
+    Lock::ExclusiveLock lk(opCtx, opCtx->lockState(), _kChunkOpLock);
 
     auto findCollResponse = uassertStatusOK(
         configShard->exhaustiveFindOnConfig(opCtx,
@@ -1461,7 +1461,7 @@ void ShardingCatalogManager::ensureChunkVersionIsGreaterThan(
     // Take _kChunkOpLock in exclusive mode to prevent concurrent chunk operations.
     // TODO (SERVER-25359): Replace with a collection-specific lock map to allow splits/merges/
     // move chunks on different collections to proceed in parallel.
-    Lock::ExclusiveLock lk(opCtx->lockState(), _kChunkOpLock);
+    Lock::ExclusiveLock lk(opCtx, opCtx->lockState(), _kChunkOpLock);
 
     const auto configShard = Grid::get(opCtx)->shardRegistry()->getConfigShard();
 
@@ -1636,7 +1636,7 @@ void ShardingCatalogManager::bumpMultipleCollectionVersionsAndChangeMetadataInTx
 
     // Take _kChunkOpLock in exclusive mode to prevent concurrent chunk splits, merges, and
     // migrations
-    Lock::ExclusiveLock lk(opCtx->lockState(), _kChunkOpLock);
+    Lock::ExclusiveLock lk(opCtx, opCtx->lockState(), _kChunkOpLock);
 
     using NssAndShardIds = std::pair<NamespaceString, std::vector<ShardId>>;
     std::vector<NssAndShardIds> nssAndShardIds;
@@ -1685,7 +1685,7 @@ void ShardingCatalogManager::splitOrMarkJumbo(OperationContext* opCtx,
             // Take _kChunkOpLock in exclusive mode to prevent concurrent chunk operations.
             // TODO (SERVER-25359): Replace with a collection-specific lock map to allow
             // splits/merges/ move chunks on different collections to proceed in parallel.
-            Lock::ExclusiveLock lk(opCtx->lockState(), _kChunkOpLock);
+            Lock::ExclusiveLock lk(opCtx, opCtx->lockState(), _kChunkOpLock);
 
             const auto findCollResponse = uassertStatusOK(configShard->exhaustiveFindOnConfig(
                 opCtx,
@@ -1749,7 +1749,7 @@ void ShardingCatalogManager::setAllowMigrationsAndBumpOneChunk(
     {
         // Take _kChunkOpLock in exclusive mode to prevent concurrent chunk splits, merges, and
         // migrations
-        Lock::ExclusiveLock lk(opCtx->lockState(), _kChunkOpLock);
+        Lock::ExclusiveLock lk(opCtx, opCtx->lockState(), _kChunkOpLock);
 
         const auto cm = uassertStatusOK(
             Grid::get(opCtx)->catalogCache()->getShardedCollectionRoutingInfoWithRefresh(opCtx,
