src/mongo/db/s/config/sharding_catalog_manager_zone_operations.cpp
@@ -188,7 +188,7 @@ Status checkHashedShardKeyRange(const ChunkRange& range, const KeyPattern& shard
 Status ShardingCatalogManager::addShardToZone(OperationContext* opCtx,
                                               const std::string& shardName,
                                               const std::string& zoneName) {
-    Lock::ExclusiveLock lk(opCtx->lockState(), _kZoneOpLock);
+    Lock::ExclusiveLock lk(opCtx, opCtx->lockState(), _kZoneOpLock);
 
     auto updateStatus = Grid::get(opCtx)->catalogClient()->updateConfigDocument(
         opCtx,
@@ -213,7 +213,7 @@ Status ShardingCatalogManager::addShardToZone(OperationContext* opCtx,
 Status ShardingCatalogManager::removeShardFromZone(OperationContext* opCtx,
                                                    const std::string& shardName,
                                                    const std::string& zoneName) {
-    Lock::ExclusiveLock lk(opCtx->lockState(), _kZoneOpLock);
+    Lock::ExclusiveLock lk(opCtx, opCtx->lockState(), _kZoneOpLock);
 
     auto configShard = Grid::get(opCtx)->shardRegistry()->getConfigShard();
     const NamespaceString shardNS(ShardType::ConfigNS);
@@ -291,7 +291,7 @@ void ShardingCatalogManager::assignKeyRangeToZone(OperationContext* opCtx,
 
     auto configServer = Grid::get(opCtx)->shardRegistry()->getConfigShard();
 
-    Lock::ExclusiveLock lk(opCtx->lockState(), _kZoneOpLock);
+    Lock::ExclusiveLock lk(opCtx, opCtx->lockState(), _kZoneOpLock);
 
     auto zoneDoc = uassertStatusOK(configServer->exhaustiveFindOnConfig(
                                        opCtx,
@@ -339,7 +339,7 @@ void ShardingCatalogManager::removeKeyRangeFromZone(OperationContext* opCtx,
                                                     const ChunkRange& givenRange) {
     auto configServer = Grid::get(opCtx)->shardRegistry()->getConfigShard();
 
-    Lock::ExclusiveLock lk(opCtx->lockState(), _kZoneOpLock);
+    Lock::ExclusiveLock lk(opCtx, opCtx->lockState(), _kZoneOpLock);
 
     ChunkRange actualRange = givenRange;
     KeyPattern keyPattern;
